opacity level on nav looked funny in some situations, changed back to solid

--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -126,7 +126,7 @@ em {
 
 /* global nav and footer styles*/
 nav, footer {
-    background-color: #ccc6c2ee;
+    background-color: #ccc6c2;
     padding: 0.5rem 0 0.5rem 0;
 }
 
