working on my css skills. Some elements are better but it is still not great. Will try a tailwind version too

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -42,7 +42,7 @@
   </section>
   <section class="mainPageSections">
     <h3>Step #1: Pay Down Your Debt</h3>
-    <p>
+    <p class="mainPageP">
       For many of us, debt is an inevitable part of modern life. Housing,
       healthcare, car payments. The list goes on, but not all debt is
       inevitable. Things like reducing credit card spending or getting a more
@@ -59,7 +59,7 @@
 
   <section class="mainPageSections">
     <h3>Step #2: Invest For Your Future</h3>
-    <p>
+    <p class="mainPageP">
       Investing lets you make interest rates work for you. When you were in
       debt, interest rates meant you got back way less money than you put in.
       When you invest, its the other way around. Even investing relatively small
