updated alt text to reflect new images used

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -6,7 +6,7 @@
       <img
         class="img-fluid shadow-md rounded"
         src="/static/436.png"
-        alt="A couple looking at thier laptop"
+        alt="Illustration of woman standing over houses, reaching for the stars"
       />
     </div>
     <div class="p-2 d-flex flex-column ">
@@ -49,7 +49,7 @@
   <section class=" d-flex flex-column flex-lg-row p-5 align-items-center text-muted ">
 
     <div>
-      <img class="img-fluid" src="/static/62.png" alt=""/>
+      <img class="img-fluid" src="/static/62.png" alt="Person sitting at desk on computer"/>
     </div>
 
     <div>
@@ -83,7 +83,7 @@
       </p>
       
     </div>
-    <div class="order-sm-1 order-lg-2"><img class="img-fluid" src="/static/72.png" alt=""/></div>
+    <div class="order-sm-1 order-lg-2"><img class="img-fluid" src="/static/72.png" alt="Person standing beside charts and graphs"/></div>
   </section>
 
 
