--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -2,7 +2,7 @@
 <header class="container mt-5 mb-5">
   <div class="d-flex flex-column flex-lg-row align-items-center">
     <div>
-      <img src="static/114.png" alt="Elderly couple holding flowers" />
+      <img src="static/114.png" alt="Woman working on computer with coffee" />
     </div>
     <div>
       <h1 class="text-center display-6">Investment Calculator</h1>
