--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -7,7 +7,7 @@
       <img
         class="img-fluid shadow-md rounded"
         src="static/331.png"
-        alt="A couple looking at their bills"
+        alt="Women having a discussion on couches"
       />
     </div>
     <div>
