added padding to loan and invest pages to improve mobile display

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -71,7 +71,7 @@
 
   <section class="d-flex flex-column flex-lg-row  align-items-center p-5 bg-success text-white">
     
-    <div class="order-sm-2 order-lg-1">
+    <div class="order-2 order-lg-1">
       <h3 class="mx-auto px-5" >Step #2: Invest For Your Future</h3>
       <p class="mx-auto px-5  mt-4 text-start" style="max-width: 1200px;">
         Investing lets you make interest rates work for you. When you were in
@@ -83,7 +83,7 @@
       </p>
       
     </div>
-    <div class="order-sm-1 order-lg-2"><img class="img-fluid" src="/static/72.png" alt="Person standing beside charts and graphs"/></div>
+    <div class="order-1 order-lg-2"><img class="img-fluid" src="/static/72.png" alt="Person standing beside charts and graphs"/></div>
   </section>
 
 
