--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%} {% block title %}Invest{% endblock %} {%block content%}
-<header class="container mt-5 mb-5">
+<header class="container mt-5 mb-5 p-5">
   <div class="d-flex flex-column flex-lg-row align-items-center">
     <div>
       <img src="static/114.png" alt="Woman working on computer with coffee" />
