--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}Loans{% endblock %} {% block content
 %}
 
-<header class="container mt-5 mb-5">
+<header class="container mt-5 mb-5 p-5">
   <div class="d-flex flex-column flex-lg-row align-items-center">
     <div>
       <img
