added hompage link to MoneyCalcs logo

--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -24,7 +24,7 @@
   <body >
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <div class="container-fluid">
-        <a class="navbar-brand link-light" href="#">MoneyCalcs</a>
+        <a class="navbar-brand link-light" href="{{url_for('views.index')}}">MoneyCalcs</a>
         <button
           class="navbar-toggler"
           type="button"
