--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -69,7 +69,7 @@
    
   </section>
 
-  <section class="d-flex flex-column flex-lg-row  align-items-center p-5 bg-success text-white">
+  <section class="d-flex flex-column flex-lg-row  align-items-center p-5 mb-5 bg-success text-white">
     
     <div class="order-2 order-lg-1">
       <h3 class="mx-auto px-5" >Step #2: Invest For Your Future</h3>
